--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.6",
-    "@nestjs/common": "^9.2.0",
+    "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.0",
+    "@nestjs/core": "^9.2.1",
     "@nestjs/graphql": "^10.1.6",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.0",
+    "@nestjs/platform-express": "^9.2.1",
     "@prisma/client": "^4.6.1",
     "apollo-server-express": "^3.11.1",
-    "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "luxon": "^3.1.0",
+    "luxon": "^3.1.1",
+    "node-fetch": "^2.6.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -47,17 +47,18 @@
   "devDependencies": {
     "@nestjs/cli": "^9.1.5",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.2.0",
+    "@nestjs/testing": "^9.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/jest": "29.2.3",
     "@types/luxon": "^3.1.0",
     "@types/node": "^18.11.9",
+    "@types/node-fetch": "^2.6.2",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
